testsuite/tests/v1/import/error_in_module/test.out
Error: Symbol declared multiple times
   ╭─[ <working-dir>/foo.lkql:2:5 ]
   │
 1 │ val foo_value = 1
   │     ────┬────  
   │         ╰────── Hint: Previously declared here
 2 │ val foo_value = 1
   │     ────┬────  
   │         ╰────── The symbol "foo_value" already exists in the current scope
───╯
